Carrie removed /div in sponsor area; CSS changes to Show Sponsorship header (no longer changing color in dark mode), links now are colored (navy/light blue)

--- a/css/main.scss
+++ b/css/main.scss
@@ -361,7 +361,7 @@ section{
 		background:$white;
 		margin-top: -50px;
 		color:$black;
-		p,em,a{
+		p,em,.htext {
 			color:$black;
 		}
 		.headline{
